--- a/index.css
+++ b/index.css
@@ -20,6 +20,34 @@ li {
   display: inline-block;
 }
 
+.button
+{
+  background-color: #ffcdb2;
+  color: black;
+  padding: 16px;
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+  border: none;
+}
+
+.dropdown{
+  position: relative;
+  display: inline-block;
+}
+
+.onostocesespustati{
+  display: none;
+  position: absolute;
+  background-color: bisque;
+  min-width: 160px;
+}
+
+.onostocesespustati a{
+  color: #4a4e69;
+}
+
+.dropdown:hover .onostocesespustati {display: block;}
+
 h1,
 h2 {
   color: #6d6875;
